# echo

./: .gitignore  CMakeLists.txt  README.md  licence.md
.github/workflows/: tests.yml  update_submodules.yml
include/: Parser.hpp  parser.hpp
source/: Parser.cpp  main.cpp  parser.cpp
src/: Parser.cpp  main.cpp
test/: testParser.cpp
